@@ -2,8 +2,7 @@
 envlist = py27,py34
 
 [testenv]
-setenv=
-    DISPLAY=:0
+passenv = DISPLAY
 whitelist_externals = echo
 recreate = True
 install_command=pip install -I  {opts} {packages}
