@@ -13,6 +13,7 @@
     <thirdpartyegg name="Babel" minversion="2.1" maxversion="2.1.999"/> 
     <thirdpartyegg name="twine" minversion="1.8.0" maxversion="1.8.9999"/> 
     <thirdpartyegg name="wheel" minversion="0.24.0" maxversion="0.24.9999"/> 
+    <thirdpartyegg name="tzlocal" minversion="1.2.0" maxversion="1.2.9999"/> 
   </deps>
 
   <deps purpose="test">
