@@ -3,3 +3,4 @@ reahl-tofu>=4.0,<4.1
 Babel>=2.1,<2.1.999
 twine>=1.8.0,<1.8.9999
 wheel>=0.24.0,<0.24.9999
+tzlocal>=1.2.0,<1.2.9999
