@@ -2,12 +2,11 @@
 envlist = py27,py34
 
 [testenv]
-setenv=
-    DISPLAY=:0
-passenv=DEBFULLNAME EMAIL SSH_AUTH_SOCK GPG_AGENT_INFO
+passenv=DISPLAY DEBFULLNAME EMAIL DEBEMAIL PACKAGESIGNKEYID SSH_AUTH_SOCK GPG_AGENT_INFO
 recreate = True
 install_command=pip install -I  {opts} {packages}
 commands=
+   pip install -U setuptools==22.0.5
    python setup.py -q install_test_dependencies 
    python setup.py -q nosetests -T reahl/dev_dev
 
