@@ -2,10 +2,10 @@
 envlist = py27,py34
 
 [testenv]
-setenv=
-    DISPLAY=:0
+passenv = DISPLAY
 recreate=True
 install_command=pip install -I  {opts} {packages}
 commands=
+   pip install -U setuptools==22.0.5
    python setup.py -q install_test_dependencies 
    python setup.py -q nosetests --tests=reahl/sqlalchemysupport_dev  -i '.*' -t
