@@ -2,12 +2,11 @@
 envlist = py27,py34
 
 [testenv]
-setenv=
-    DISPLAY=:0
+passenv = DISPLAY
 recreate=True
 install_command=pip install -I  {opts} {packages}
 commands=
-   pip install -U pip
+   pip install -U setuptools==22.0.5
    python setup.py -q install_test_dependencies 
    python setup.py -q nosetests --tests=reahl/webdeclarative_dev -i '.*' -t
 
