@@ -2,12 +2,12 @@
 envlist = py27,py34
 
 [testenv]
-setenv=
-    DISPLAY=:0
+passenv = DISPLAY
 whitelist_externals = echo
 recreate = True
 install_command=pip install -I  {opts} {packages}
 commands=
+   pip install -U setuptools==22.0.5
    python setup.py -q install_test_dependencies 
    python setup.py -q nosetests --tests=reahl/webdev_dev -i'.*' -t
 
