@@ -3,9 +3,11 @@ python-reahl (4.0.0) unstable; urgency=low
  * Removed all previously deprecated functionality.
  * Removed css_id kwarg to Nav, Menu.
  * Removed a_list argument to Menu constructor.
- * Removed Menu.add_submenu. 
+ * Removed Menu.add_submenu.
  * Removed Menu.add_item, made MenuItem class hierachy private.
  * Upgraded JQueryUI to 1.12.0, but trimmed it down to only the widget factory.
+ * Upgraded version of BeautifulSoup to 4.4 for python 3.5 compatibility.
+ * Added arguments to 'reahl devpitest' command and an option to run tox on ly on current python environment.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 12 Jun 2016 08:47:00 +0200
 
